cmake_minimum_required(VERSION 3.5)

project(octonet VERSION 1.0.1 DESCRIPTION "octo-network")

set(PUBLIC_HEADERS
	"include/SocketServer.h"
)

SET(PUBLIC_SOURCES_FILES
	"src/SocketServer.c"
)

ADD_LIBRARY(octonet STATIC ${PUBLIC_SOURCES_FILES} ${PRIVATE_SOURCES_FILES})

INSTALL (
	TARGETS octonet
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

INSTALL (
    DIRECTORY ${CMAKE_SOURCE_DIR}/include/
    DESTINATION include
    FILES_MATCHING PATTERN "*.h*")